<resources>
    <string name="app_name">Media Aluno V3</string>
    <string name="title_activity_result">result</string>
    <string name="action_settings">Settings</string>
    <string name="lblNome">Nome: </string>
    <string name="lblNota1">Nota 1: </string>
    <string name="lblNota2">Nota 2: </string>
    <string name="lblNota3">Nota 3: </string>
    <string name="btnCalcular">Calcular Média</string>


</resources>
